--- a/waybar/style.css
+++ b/waybar/style.css
@@ -17,7 +17,7 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-  padding: 0 7px;
+  padding: 5px 7px;
   color: #f5f5f5;
   /* Use box-shadow instead of border so the text isn't offset */
   box-shadow: inset 0 -3px transparent;
@@ -43,6 +43,10 @@ window#waybar.hidden {
 #workspaces button:hover {
   color: #00d992;
   background-color: #323232;
+}
+
+#taskbar button {
+  padding: 5px 2px;
 }
 
 #window {
